--- a/DocumentDbRepository.IntegrationTest/DocumentDbRepository.IntegrationTest.csproj
+++ b/DocumentDbRepository.IntegrationTest/DocumentDbRepository.IntegrationTest.csproj
@@ -70,6 +70,7 @@
     <Compile Include="TestSubDocument.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitignore" />
     <None Include="app.config" />
     <Content Include="DocumentDb.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
